--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ bottom: 6vh;
   <div id="chat-window" class="window">
     <div class="window-title">Chat de Twitch ( ͡° ͜ʖ ͡°)</div>
     <div class="window-content">
-        <iframe src="https://www.twitch.tv/embed/teemo_en_arbusto/chat?parent=localhost" frameborder="0" allowfullscreen="true"></iframe>
+        <iframe src="https://www.twitch.tv/embed/teemo_en_arbusto/chat?parent=johnporro.github.io" frameborder="0" allowfullscreen="true"></iframe>
     </div>
   </div>
 
