--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@ body {
   
 }   
 
-#logo:hover{
+/*#logo:hover{
     transform: scale(1.1);
 bottom: 6vh;
     opacity: calc(80%);
-}
+}*/
 
 </style>
 </head>
