--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="icon" href="https://files.catbox.moe/swxiui.png" type="image/png">
 <html>
     <div id="peliculas-mensaje">✨ ¡Pide pelis en el chat! ✨</div>
 
