--- a/index.html
+++ b/index.html
@@ -265,7 +265,14 @@ setRandomMedia();
 
 
 </script>
-
 </body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E3FK7SZ77J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E3FK7SZ77J');
+</script>
 
 </html>
