--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <div id="peliculas-mensaje">✨ ¡Pedi pelis en el chat! ✨</div>
 
 <head>
-    <meta http-equiv="default-src * 'unsafe-inline' 'unsafe-eval'; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline';">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🔴 Ｄｅｖｏｘ　ＴＶ</title>
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
 
