Actualizar index.html
zindex chat

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ body {
     height: 95vh;
     background-color: #31313179;
     font-size:11px;
+    z-index:6;
 }
 
         /* Estilos para los iframes */
