Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
       #chat-window { width: 85vw; height: 45vh; right: 0vw; top: 52vh; }
       #chatty { height: 60%; font-size: 9px; }
       #logo { height: 10%; bottom: 2vh; }
-      #twitchy { height: 68%; }
+      #twitchy { height: 68%; aspect-ratio: auto;  }
     }
 
 #background {
