--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <link rel="icon" href="https://files.catbox.moe/swxiui.png" type="image/png">
 <html>
-    <div id="peliculas-mensaje">¡Pedi tu pelicula! ✨</div>
+    <div id="peliculas-mensaje">✨ ¡Pedi pelis en el chat! ✨</div>
 
 <head>
-    <meta http-equiv="default-src * 'unsafe-inline' 'unsafe-eval'; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline';">
 <title>🔴 Ｄｅｖｏｘ　ＴＶ</title>
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
 
@@ -13,7 +12,20 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+#element::-webkit-scrollbar {
+    display: none;
+}
+.hide-scroll {
+    overflow: hidden;
+}
 
+.container {
+    -ms-overflow-style: none;  // Internet Explorer 10+
+    scrollbar-width: none;  // Firefox
+}
+.container::-webkit-scrollbar { 
+    display: none;  // Safari and Chrome
+}
 body {
     font-family: "Press Start 2P", system-ui;
     font-weight: 400;
@@ -21,12 +33,21 @@ body {
     background-color: #c0c0c0;
     margin: 0;
     overflow: hidden;
-    font-size: clamp(10px, 2vw, 12px);
+    font-size:12px !important;
     text-shadow: 0 0 5px #fff; 
+  }
 
-
-}
    
+/* Mobile-specific adjustments */
+    @media (max-width: 768px) { 
+      body { font-size: 10px !important; } 
+      #peliculas-mensaje { font-size: 8px; bottom: 1vh; right: 0.5%; }
+      #stream-window { width: 65vw; height: 50vh; left: 2.5vw; }
+      #chat-window { width: 85vw; height: 45vh; right: 2.5vw; top: 52vh; }
+      #chatty { height: 60%; font-size: 9px; }
+      #logo { height: 10%; bottom: 2vh; }
+      #twitchy { height: 68%; }
+    }
 
 #background {
     position: fixed;
@@ -38,28 +59,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-#stream-window, #chat-window {
-      position: relative; 
-      width: 95%; 
-      height: auto; 
-      margin: 10px auto;
-      max-width: 83vw;
-      max-height: 95vh;
-      background-color: #50505062;
-    }
-
-    #chat-window {
-      width: 95%; 
-      order: 2;  
-      overflow-y: hidden; /* Hide vertical scrollbar */
-    }
-
-    #stream-window {
-      order: 1;
-    }
-
-    #peliculas-mensaje {
+#peliculas-mensaje {
   position: fixed;
   z-index:1;
   bottom: 2vh; /* Ajusta la distancia al logo */
@@ -71,49 +71,6 @@ body {
   /*animation: glow 2s infinite alternate; /* Animación de brillo */
   opacity: calc(80%);
 }
-
-    /* Media queries for specific breakpoints */
-    @media (max-width: 768px) { 
-      #stream-window, #chat-window {
-        width: 100%; 
-      }
-      #chat-window {
-        order: 1;
-        margin-bottom: 10px;
-        overflow-y: auto; /* Show scrollbar on small screens */
-      }
-      #stream-window {
-        order: 2;
-      }
-      #peliculas-mensaje {
-        font-size: 10px;
-      }
-    }
-
-    @media (min-width: 1080px) { 
-      #stream-window, #chat-window {
-        width: 100%; 
-      }
-      #chat-window {
-        order: 1;
-        top:-75em;
-        right:-70em;
-        width: 19em;
-        height: 60em;
-        margin-bottom: 10px;
-        overflow-y: auto; /* Show scrollbar on small screens */
-      }
-      #stream-window {
-        order: 2;
-        margin-left: 6em;
-        height: 80em;
-        /*overflow-y: hidden;
-*/
-      }
-      #peliculas-mensaje {
-        font-size: 10px;
-      }
-    }
 
 @keyframes glow {
   from {
@@ -155,8 +112,29 @@ body {
 
 .window-content {
     padding: 10px;
+    position: relative;
+    max-width: 99%;
 }
 
+#stream-window {
+            top: 10px;
+            left: 3%;
+            width: 83vw; /* Use vw for viewport width, adjust as needed */
+            height: 95vh; /* Use vh for viewport height */
+            background-color: #31313179;
+            z-index:5;
+        }
+
+
+#chat-window {
+    top: 10px;
+    right: 10px;
+    width: 13%; 
+    height: 90vh;
+    background-color: #31313179;
+    font-size:11px;
+    z-index:6;
+}
 
         /* Estilos para los iframes */
         .window-content iframe {
@@ -170,19 +148,20 @@ body {
         }
 
         #chatty { 
-    height: 91%; 
+    height: 94%; 
     opacity: calc(80%);
+    z-index: 99999;
         }
 
 
         #logo {
     position: fixed;       /* Fija el logo en la esquina */
-    bottom: 4vh;             /* Distancia desde arriba */
+    bottom: 1vh;             /* Distancia desde arriba */
     right: 1%;
     height: 15%;           /* Distancia desde la derecha */
-    z-index: 2;            /* Asegura que esté encima de todo */
+    z-index: 1;            /* Asegura que esté encima de todo */
     transition: 0.5s ease; 
-    opacity: calc(80%);
+    opacity: calc(100%);
     transform: scale(1.0);
   
 }   
@@ -223,7 +202,7 @@ bottom: 6vh;
   </div>
 
   <div id="chat-window" class="window">
-    <div class="window-title">Chat ( ͡° ͜ʖ ͡°)</div>
+    <div class="window-title">Chat de Twitch ( ͡° ͜ʖ ͡°)</div>
     <div class="window-content" id="chatty">
         <iframe src="https://www.twitch.tv/embed/teemo_en_arbusto/chat?darkpopout&parent=devox-tv.github.io" frameborder="0" allowfullscreen="true"></iframe>
     </div>
