--- a/index.html
+++ b/index.html
@@ -12,20 +12,7 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-#element::-webkit-scrollbar {
-    display: none;
-}
-.hide-scroll {
-    overflow: hidden;
-}
 
-.container {
-    -ms-overflow-style: none;  // Internet Explorer 10+
-    scrollbar-width: none;  // Firefox
-}
-.container::-webkit-scrollbar { 
-    display: none;  // Safari and Chrome
-}
 body {
     font-family: "Press Start 2P", system-ui;
     font-weight: 400;
@@ -151,6 +138,7 @@ body {
     height: 94%; 
     opacity: calc(80%);
     z-index: 99999;
+    overflow: auto;
         }
 
 
