--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <link rel="icon" href="https://files.catbox.moe/swxiui.png" type="image/png">
 <html>
-    <div id="peliculas-mensaje">✨ ¡Pedi pelis en el chat! ✨</div>
+    <div id="peliculas-mensaje">Pedi tu peli en el vox</div>
 
 <head>
 <title>🔴 Ｄｅｖｏｘ　ＴＶ</title>
@@ -117,7 +117,7 @@ body {
     top: 10px;
     right: 10px;
     width: 13%; 
-    height: 90vh;
+    height: 95vh;
     background-color: #31313179;
     font-size:11px;
     z-index:6;
@@ -144,9 +144,10 @@ body {
 
         #logo {
     position: fixed;       /* Fija el logo en la esquina */
-    bottom: 1vh;             /* Distancia desde arriba */
-    right: 1%;
-    height: 15%;           /* Distancia desde la derecha */
+    bottom: 4vh;             /* Distancia desde arriba */
+    right: 0%;
+    left: 86%;
+    height: 18%;           /* Distancia desde la derecha */
     z-index: 1;            /* Asegura que esté encima de todo */
     transition: 0.5s ease; 
     opacity: calc(100%);
