--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <link rel="icon" href="https://files.catbox.moe/swxiui.png" type="image/png">
 <html>
-    <div id="peliculas-mensaje">Pedi tu peli en el vox</div>
+    <div id="peliculas-mensaje">Ahora Viendo:°º¤ø,¸¸,ø¤º°`°º¤ø,¸,ø¤°º¤ø,¸¸,ø¤º°`°º¤ø,¸</div>
 
+    
 <head>
 <title>🔴 Ｄｅｖｏｘ　ＴＶ</title>
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
@@ -48,9 +49,10 @@ body {
 }
 #peliculas-mensaje {
   position: fixed;
+  text-align: left;
   z-index:1;
-  bottom: 2vh; /* Ajusta la distancia al logo */
-  right: 1%;   /* Ajusta la posición horizontal */
+  bottom: 1vh; /* Ajusta la distancia al logo */
+  right: 80%;   /* Ajusta la posición horizontal */
   color: #fff;
   font-family: "Press Start 2P", system-ui;
   font-size: 12px;
