--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <link rel="icon" href="https://files.catbox.moe/swxiui.png" type="image/png">
 <html>
-    <div id="peliculas-mensaje">Ahora Viendo:°º¤ø,¸¸,ø¤º°`°º¤ø,¸,ø¤°º¤ø,¸¸,ø¤º°`°º¤ø,¸</div>
+    <div id="peliculas-mensaje">Ahora Viendo: El Faro</div>
 
     
 <head>
