--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <link rel="icon" href="https://files.catbox.moe/swxiui.png" type="image/png">
 <html>
-    <div id="peliculas-mensaje">Ahora Viendo: El Faro</div>
+    <div id="peliculas-mensaje">Prox Stream: Blade Runner 2049</div>
 
     
 <head>
